force-app/main/default/objects/SAP_Plants__x/SAP_Plants__x.object-meta.xml
<CustomObject>
    <description>SAP_PlantsSet</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>SAP_PlantsSet</externalName>
    <label>SAP_Plants</label>
    <pluralLabel>SAP_PlantsSet</pluralLabel>
</CustomObject>