force-app/main/default/objects/SAP_Plants__x/fields/Bwkey__c.field-meta.xml
<CustomField>
    <fullName>Bwkey__c</fullName>
    <description>Bwkey</description>
    <externalDeveloperName>Bwkey</externalDeveloperName>
    <label>Bwkey</label>
    <length>4</length>
    <type>Text</type>
</CustomField>