force-app/main/default/objects/SAP_Plants__x/fields/Ekorg__c.field-meta.xml
<CustomField>
    <fullName>Ekorg__c</fullName>
    <description>Ekorg</description>
    <externalDeveloperName>Ekorg</externalDeveloperName>
    <label>Ekorg</label>
    <length>4</length>
    <type>Text</type>
</CustomField>