force-app/main/default/objects/SAP_Plants__x/fields/Kunnr__c.field-meta.xml
<CustomField>
    <fullName>Kunnr__c</fullName>
    <description>Kunnr</description>
    <externalDeveloperName>Kunnr</externalDeveloperName>
    <label>Kunnr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>