force-app/main/default/objects/SAP_Plants__x/fields/Land1__c.field-meta.xml
<CustomField>
    <fullName>Land1__c</fullName>
    <description>Land1</description>
    <externalDeveloperName>Land1</externalDeveloperName>
    <label>Land1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>