force-app/main/default/objects/SAP_Plants__x/fields/Lifnr__c.field-meta.xml
<CustomField>
    <fullName>Lifnr__c</fullName>
    <description>Lifnr</description>
    <externalDeveloperName>Lifnr</externalDeveloperName>
    <label>Lifnr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>