force-app/main/default/objects/SAP_Plants__x/fields/Name1__c.field-meta.xml
<CustomField>
    <fullName>Name1__c</fullName>
    <description>Name1</description>
    <externalDeveloperName>Name1</externalDeveloperName>
    <label>Name1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>