force-app/main/default/objects/SAP_Plants__x/fields/Ort01__c.field-meta.xml
<CustomField>
    <fullName>Ort01__c</fullName>
    <description>Ort01</description>
    <externalDeveloperName>Ort01</externalDeveloperName>
    <label>Ort01</label>
    <length>25</length>
    <type>Text</type>
</CustomField>