force-app/main/default/objects/SAP_Plants__x/fields/Pstlz__c.field-meta.xml
<CustomField>
    <fullName>Pstlz__c</fullName>
    <description>Pstlz</description>
    <externalDeveloperName>Pstlz</externalDeveloperName>
    <label>Pstlz</label>
    <length>10</length>
    <type>Text</type>
</CustomField>