force-app/main/default/objects/SAP_Plants__x/fields/Regio__c.field-meta.xml
<CustomField>
    <fullName>Regio__c</fullName>
    <description>Regio</description>
    <externalDeveloperName>Regio</externalDeveloperName>
    <label>Regio</label>
    <length>3</length>
    <type>Text</type>
</CustomField>