force-app/main/default/objects/SAP_Plants__x/fields/Spras__c.field-meta.xml
<CustomField>
    <fullName>Spras__c</fullName>
    <description>Spras</description>
    <externalDeveloperName>Spras</externalDeveloperName>
    <label>Spras</label>
    <length>2</length>
    <type>Text</type>
</CustomField>