force-app/main/default/objects/SAP_Plants__x/fields/Stras__c.field-meta.xml
<CustomField>
    <fullName>Stras__c</fullName>
    <description>Stras</description>
    <externalDeveloperName>Stras</externalDeveloperName>
    <label>Stras</label>
    <length>30</length>
    <type>Text</type>
</CustomField>