force-app/main/default/objects/SAP_Plants__x/fields/Vkorg__c.field-meta.xml
<CustomField>
    <fullName>Vkorg__c</fullName>
    <description>Vkorg</description>
    <externalDeveloperName>Vkorg</externalDeveloperName>
    <label>Vkorg</label>
    <length>4</length>
    <type>Text</type>
</CustomField>